--- a/index.html
+++ b/index.html
@@ -1,34 +1,55 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<title>João Batista - Portfolio Online</title>
+		<title>Currículo - João Batista</title>
+
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="css/styless.css">
+		<link rel="stylesheet" href="styless.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
-		<script type="text/javascript" src="js/script.js"></script>
 	</head>
 	<body>
-		<div id="navigation" class="navigation">
+		
+		<div class="navigation">
 			<ul>
-				<li>Home</li>
-				<li>Portfolio</li>
+				<li><a href="info.html">Dados Pessoais</a></li>
 				<li><a href="curriculo.html">Curriculo</a></li>
-				<li>Contato</li>
-				<li id="threeline-icon" class="threeline-icon" onclick="openNav()">&#9776;</li>
+				<li><a href="certificates.html">Certificados</a></li>
 			</ul>
 		</div>
-		<div class="capa">
-			<div class="profile-pic">
-				<img src="foto.jpg" alt="Joao Batista" />
-			</div>
-			<div class="profile-title">
-				<h1>João <span>Batistta</span></h1>
-				<h2>
-					Cursando análise e desenvolvimento de sistemas-Fatec 
-				</h2>
-			</div>
+		
+		<div class="main">
+
+			<ul class="caminho">
+				<li><a href="index.html">Home</a></li>
+				<li>></li>
+				<li>Currículo</li>
+			</ul>
+			<h1>Currículo</h1>
+
+			<h2>Dados Pessoais</h2>
+
+			<img class="cv-pic" src="foto.jpg" alt="João" width="200px" />
+
+			<h3>Nome:</h3>
+			<p>João Batista</p>
+			<h3>Residência:</h3>
+			<p>Itapetininga, Brasil</p>
+
+
+			<h3 style="clear: left">Idiomas:</h3>
+
+			<p>Português (Nativo)</p>
+			<p>Inglês-Básico</p>
+			<h2>Contato</h2>
+			<p>(15)98127-0906</p>
+
+
+
+			<a href="index.html">Voltar ao início<a>
+
+
 		</div>
 	</body>
 </html>
