--- a/pagina_principal 1.html
+++ b/pagina_principal 1.html
@@ -4,7 +4,7 @@
 		<title>Currículo - João Batista</title>
 
 		<meta charset="utf-8" />
-		<link rel="stylesheet" href="styless.css">
+		<link rel="stylesheet" href="styles.css">
 		<link rel="preconnect" href="https://fonts.googleapis.com">
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
 		<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@100;300;400&display=swap" rel="stylesheet">
